# pyosotis

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_dummies.py  sample_runner.py  sample_tasks.py  setup.cfg  taskrunner.py
assets/: pyosotis_banner_readme.md
pyosotis/: gui.py  runner.py  task.py
src/pyosotis/: __init__.py  group.py  gui.py  runner.py  task.py  task_tools.py
tests/: tasks_for_testing.py  test_group.py  test_task.py  test_task_tools.py
